# heysquid

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/agents/: developer.md  researcher.md  reviewer.md  tester.md  writer.md
.claude/refs/: agent-team.md  dashboard.md  deep-work.md
.claude/rules/: agent-team.md  pm-workflow.md  squad-mode.md  telegram-api.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: fanmolt-guide.md  getting-started.md
heysquid/: .env.example  __init__.py  _job_flow.py  _msg_store.py  _news_fetcher.py  _news_scorer.py  _recovery.py  _session_memory.py  _task_memory.py  _thread_drafter.py  _working_lock.py  agent_dashboard.py  agents.py  briefing.py  cli.py  config.py  paths.py  quick_check.py  telegram_bot.py  telegram_listener.py  telegram_sender.py  threads_poster.py  threads_replier.py  trading_bot.py  workspace.py
heysquid/automations/: __init__.py
heysquid/automations/briefing/: __init__.py  _news_fetcher.py  _news_scorer.py  (+1 more)
heysquid/channels/: __init__.py  _base.py  _msg_store.py  _router.py  _typing.py  discord_channel.py  discord_listener.py  slack.py  slack_listener.py  telegram.py  telegram_listener.py  threads.py  x.py
heysquid/core/: __init__.py  _job_flow.py  _working_lock.py  agents.py  broadcaster.py  cli.py  config.py  daemon.py  http_utils.py  hub.py  orchestrator.py  paths.py  plugin_loader.py  quick_check.py  scheduler.py  webhook_server.py  workspace.py
heysquid/dashboard/: __init__.py  kanban.py
heysquid/memory/: __init__.py  recovery.py  session.py  tasks.py
heysquid/skills/: GUIDE.md  __init__.py  _base.py  _http.py
heysquid/templates/: dashboard.html  dashboard_v4.html  env.example  identity.json  team_playbook.md
scripts/: com.telecode.briefing.plist  com.telecode.watcher.plist  demo.tape  demo_render.py  demo_sim.sh  executor.sh  get_channel_id.py  monitor.sh  record_dashboard.py  run.sh  serve_dashboard.py  serve_dashboard.sh  setup.sh  stream_viewer.py  threads_scrape_popular.py  tui_monitor.py
scripts/tui_textual/: __init__.py  __main__.py  app.py  colors.py  commands.py  data_poller.py  squid.tcss  utils.py
telecode/: .env.example  briefing.py  quick_check.py  requirements.txt  telegram_bot.py  telegram_listener.py  telegram_sender.py  threads_replier.py  workspace.py
tests/: conftest.py  test_deco_guard.py  test_deco_positions.py  test_executor_lock.py  test_job_flow.py  test_listener_changes.py  test_msg_store.py  test_task_queue.py  test_tui_stop.py
tests/opensource_validation/: results.json  t1_imports.txt  t2_cli.txt
website/app/: page.tsx
(+36 files in other folders)
